--- a/style.css
+++ b/style.css
@@ -359,3 +359,64 @@ header {
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+/* ==========Blogs container========== */
+.why-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  align-items: center;
+}
+
+.why-image img{
+  max-width: 400px;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.why-content p{
+  color: var(--text-light);
+}
+
+.why-grid{
+  margin-top: 4rem;
+  display: grid;
+  grid-template-columns: 80px auto;
+  gap: 2rem;
+}
+
+.why-grid span{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
+  color: var(--primary-color);
+  border-radius: 10px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+}
+
+.why-grid h4{
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--text-dark);
+}
+
+.why-grid p{
+  color: var(--text-light);
+}
+
+@media ( width < 600px) {
+  .why-container{
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .why-content{
+    text-align: center;
+  }
+
+  .why-grid{
+    text-align: left;
+    column-gap: 1rem;
+  }
+}
